--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "next": "^13.4.9",
     "tsc": "^2.0.4",
     "typescript": "^5.1.6"
   }
